@@ -22,6 +22,10 @@ Fixed a case where swapping story names could prevent files from being cleared w
 
 Fixed retired or trashed archive stories (having a story_category_link entry) being included for publish. [Brad Oaks]
 
+=item *
+
+Stories and Media skip the extraneous checkout/checkin history entries for (un)trash, (un)retire, and delete actions. [Brad Oaks]
+
 =back
 
 =head2 3.22 - October 18th, 2012
